--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Account">
+<ion-view view-title="Beer">
   <ion-content>
     <ion-list>
     <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
+        Enable Beer
     </ion-toggle>
     </ion-list>
   </ion-content>
