--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,28 +1,35 @@
 <ion-view view-title="Dashboard">
-  <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
+  <ion-content>
+    <ion-list>
+
+      <div class="list card" ng-repeat="book in books">
+        <div class="item item-divider">{{book.author}}</div>
+        <div class="item item-body"><div>{{book.title}}</div></div>
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
-    </div>
+
+      <!--
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="book in books" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+        <img ng-src="{{book.face}}">
+        <h2>{{book.author}}</h2>
+        <p>{{book.title}}</p>
+        <i class="icon ion-chevron-right icon-accessory"></i>
+        <ion-option-button class="button-assertive" ng-click="remove(chat)">
+          Delete
+        </ion-option-button>
+      </ion-item>
+      -->
+
+    </ion-list>
   </ion-content>
 </ion-view>
+
+<!--
+<div class="list card">
+  <div class="item item-divider">Health</div>
+  <div class="item item-body">
+    <div>
+      You ate an apple today!
+    </div>
+  </div>
+</div>
+-->
