--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -2,34 +2,13 @@
   <ion-content>
     <ion-list>
 
-      <div class="list card" ng-repeat="book in books">
-        <div class="item item-divider">{{book.author}}</div>
-        <div class="item item-body"><div>{{book.title}}</div></div>
-      </div>
-
-      <!--
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="book in books" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{book.face}}">
-        <h2>{{book.author}}</h2>
-        <p>{{book.title}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
+      <ion-item ng-repeat="object in books">
+        <div class="list card" ng-repeat="book in object">
+          <div class="item item-divider">{{book.author}}</div>
+          <div class="item item-body"><div>{{book.title}}</div></div>
+        </div>
       </ion-item>
-      -->
 
     </ion-list>
   </ion-content>
 </ion-view>
-
-<!--
-<div class="list card">
-  <div class="item item-divider">Health</div>
-  <div class="item item-body">
-    <div>
-      You ate an apple today!
-    </div>
-  </div>
-</div>
--->
