create a book updates list now

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,10 +15,15 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-// $stable: #f16529;  
+// $stable: #f16529;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+
+#addBook {
+  text-align: center;
+  // margin: 0 0 0 50px;
+}
